fix contextmenu icon alignment

--- a/skins/larry/quickrules.css
+++ b/skins/larry/quickrules.css
@@ -17,5 +17,5 @@
 #rcmContextMenu .quickrules a span
 {
   background-image: url(messageactions.png);
-  background-position: 5px 0;
+  background-position: 5px 6px;
 }
